tinyc/test/good/assign-with-use2.c
int main()
{
    unsigned x = 10;
    unsigned two = 2;
    x = x * two;
    assert( x == 20 );
    return 0;
}
