tinyc/test/bad/enum-redeclaration-of-variable.c
int main()
{
    int x = 20;

    enum {
        x = 10,
    };

    return 0;
}
